alignment fixes

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,6 +4,8 @@
 .footer-class{
     color: var(--text-color);
     background-color: var(--listing-background-color);
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 .description{
     color: var(--grey-text);
