--- a/src/app/news-letter/news-letter.component.scss
+++ b/src/app/news-letter/news-letter.component.scss
@@ -1,6 +1,6 @@
 .home-newsletter {
     padding: 80px 0;
-    background-color: var(--newsletter-background-color);;
+    background-color: var(--newsletter-background-color);
     }
     
     .home-newsletter .single {
